Fix scrollbars everywhere

--- a/CSS_files/secrets.css
+++ b/CSS_files/secrets.css
@@ -84,7 +84,7 @@ body {
     font-size: max(1.25vw, 12px);
     padding: 10px 20px;
     border: 1px solid white;
-    overflow: scroll;
+    overflow: auto;
 }
 
 section[class="no-border"]>.grid-item {
